--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,18 @@
 CHANGES
 =======
 
+* Fix loading js and view get
+
+0.0.4
+-----
+
+* Fix config
+
+0.0.3
+-----
+
+* Fix static
+
 0.0.2
 -----
 
